--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "empty_project",
-  "version": "0.0.0",
-  "description": "Empty project template",
+  "name": "onlineStore",
+  "version": "1.0.0",
+  "description": "",
   "private": true,
   "scripts": {
     "build": "webpack",
     "dev": "webpack serve --env development",
     "lint": "eslint src"
   },
-  "author": "Kris Casper",
+  "author": "",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
