--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "author": "",
   "devDependencies": {
+    "@types/wnumb": "^1.2.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
@@ -30,6 +31,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "nouislider": "^15.6.0"
+    "nouislider": "^15.6.0",
+    "wnumb": "^1.2.0"
   }
 }
