--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@types/nouislider": "^15.0.0",
     "nouislider": "^15.6.0",
     "wnumb": "^1.2.0"
   }
